--- a/dma-base/dma-base.vcxproj
+++ b/dma-base/dma-base.vcxproj
@@ -222,6 +222,7 @@
     <ClInclude Include="Source\Kmbox\manager.h" />
     <ClInclude Include="Source\Misc\Pch\Pch.h" />
     <ClInclude Include="Source\offsets.hpp" />
+    <ClInclude Include="Source\render.hpp" />
     <ClInclude Include="Source\sdk.hpp" />
     <ClInclude Include="Source\settings.hpp" />
     <ClInclude Include="Source\﻿kmbox.hpp" />
