--- a/dma-base/dma-base.vcxproj
+++ b/dma-base/dma-base.vcxproj
@@ -84,7 +84,7 @@
     <ClCompile Include="Include\imgui\imgui_widgets.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Source\kmboxNet.cpp">
+    <ClCompile Include="Source\Kmbox\kmboxNet.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
     </ClCompile>
@@ -102,12 +102,13 @@
     <ClInclude Include="Include\imgui\imstb_textedit.h" />
     <ClInclude Include="Include\imgui\imstb_truetype.h" />
     <ClInclude Include="Source\Config.h" />
-    <ClInclude Include="Source\HidTable.h" />
-    <ClInclude Include="Source\Images\image.hpp" />
-    <ClInclude Include="Source\kmbox.hpp" />
-    <ClInclude Include="Source\kmboxNet.h" />
-    <ClInclude Include="Source\Kmbox\excluded.h" />
     <ClInclude Include="Source\game.hpp" />
+    <ClInclude Include="Source\Kmbox\HidTable.h" />
+    <ClInclude Include="Source\Images\image.hpp" />
+    <ClInclude Include="Source\Kmbox\kmbox.hpp" />
+    <ClInclude Include="Source\Kmbox\kmboxNet.h" />
+    <ClInclude Include="Source\Kmbox\excluded.h" />
+    <ClInclude Include="Source\game\game.h" />
     <ClInclude Include="Source\Dma\Memory.h" />
     <ClInclude Include="Include\json.hpp" />
     <ClInclude Include="Include\leechcore.h" />
