Added triggerbot (pretty bad)

--- a/dma-base/dma-base.vcxproj.filters
+++ b/dma-base/dma-base.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClCompile Include="Source\Kmbox\kmboxNet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Dma\InputManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Dma\Registry.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Dma\Memory.h">
@@ -453,6 +459,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\game.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Dma\InputManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Dma\Registry.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
