--- a/dma-base/dma-base.vcxproj
+++ b/dma-base/dma-base.vcxproj
@@ -84,6 +84,8 @@
     <ClCompile Include="Include\imgui\imgui_widgets.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Source\Dma\InputManager.cpp" />
+    <ClCompile Include="Source\Dma\Registry.cpp" />
     <ClCompile Include="Source\Kmbox\kmboxNet.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
@@ -102,6 +104,8 @@
     <ClInclude Include="Include\imgui\imstb_textedit.h" />
     <ClInclude Include="Include\imgui\imstb_truetype.h" />
     <ClInclude Include="Source\Config.h" />
+    <ClInclude Include="Source\Dma\InputManager.h" />
+    <ClInclude Include="Source\Dma\Registry.h" />
     <ClInclude Include="Source\game.hpp" />
     <ClInclude Include="Source\Kmbox\HidTable.h" />
     <ClInclude Include="Source\Images\image.hpp" />
