--- a/dma-base/dma-base.vcxproj.filters
+++ b/dma-base/dma-base.vcxproj.filters
@@ -467,6 +467,9 @@
     <ClInclude Include="Source\Dma\Registry.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\config.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Library Include="Lib\FTD3XX.lib" />
